--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ jinja2==3.1.2
 markupsafe==2.1.3
 requests==2.31.0
 urllib3==2.0.7
+psycopg2-binary==2.9.9
+prometheus-client==0.19.0
+pytest==7.4.3
+flask-swagger-ui==4.11.1
